--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,11 +1,35 @@
 {
     "configurations": [
         {
+            "name": "libft_test",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/libft/a.out",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "Set Disassembly Flavor to Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
             "name": "ft_malcolm",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/ft_malcolm",
-            "args": ["192.168.200.255", "08:00:27:d7:23:0c", "192.168.200.10", "08:00:27:fb:ec:f8"],
+            "args": ["192.168.200.255", "08:00:27:d7:23:0c", "192.168.200.11", "08:00:27:fb:ec:f8"],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
